--- a/src/index.css
+++ b/src/index.css
@@ -1,256 +1,107 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap");
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-body {
-  font-family: 'Inter', sans-serif;
-}
-
 @layer base {
-  * {
-    @apply border-border dark:border-border-dark;
-  }
-
-  body {
-    @apply bg-background text-foreground dark:bg-background-dark dark:text-foreground-dark;
-  }
-}
-
-@layer utilities {
-  .dark ::-webkit-scrollbar {
-    width: 8px;
-    height: 8px;
-  }
-
-  .dark ::-webkit-scrollbar-track {
-    @apply bg-zinc-800;
-    border-radius: 6px;
-  }
-
-  .dark ::-webkit-scrollbar-thumb {
-    @apply bg-zinc-600;
-    border-radius: 6px;
-    border: 3px solid transparent;
-    border-color: transparent;
-  }
-
-  .dark ::-webkit-scrollbar-thumb:hover {
-    @apply bg-zinc-500;
-  }
-
-  .dark ::-webkit-scrollbar-thumb:active {
-    @apply bg-zinc-400;
-  }
-
-  ::-webkit-scrollbar {
-    width: 8px;
-    height: 8px;
-  }
-
-  ::-webkit-scrollbar-track {
-    background: #f0f0f0;
-    border-radius: 6px;
-  }
-
-  ::-webkit-scrollbar-thumb {
-    background: #cccccc;
-    border-radius: 6px;
-    border: 3px solid transparent;
-    border-color: transparent;
-  }
-
-  ::-webkit-scrollbar-thumb:hover {
-    background: #999999;
-  }
-
-  ::-webkit-scrollbar-thumb:active {
-    background: #777777;
-  }
-}
-
-/* @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap'); */
-
-/* styles.css */
-/* @tailwind base; */
-/* @tailwind components; */
-/* @tailwind utilities; */
-
-/* body {
-
-  font-family: 'Inter', sans-serif;
-} */
-
-/* @layer base {
   :root {
-    --background: 0 0% 100%;
-    --foreground: 222.2 84% 4.9%;
+    --background: #f8fafc;
+    --foreground: #020817;
 
-    --card: 0 0% 100%;
-    --card-foreground: 222.2 84% 4.9%;
+    --card: #ffffff;
+    --card-foreground: #020817;
 
-    --popover: 0 0% 100%;
-    --popover-foreground: 222.2 84% 4.9%;
+    --popover: #ffffff;
+    --popover-foreground: #020817;
 
-    --primary: 221.2 83.2% 53.3%;
-    --primary-foreground: 210 40% 98%;
-    --primary-50: 226.7 100% 96.9%;
-    --primary-100: 223.6 100% 93.1%;
-    --primary-200: 223.5 100% 86.7%;
-    --primary-300: 223.8 100% 77.8%;
-    --primary-400: 223.9 100% 68.6%;
-    --primary-500: 224.3 76.3% 48%;
-    --primary-600: 225.9 70.7% 40.2%;
-    --primary-700: 226.5 69.7% 33.1%;
-    --primary-800: 226.9 70.7% 27.1%;
-    --primary-900: 224.4 71.4% 21.8%;
+    --primary: #0369a1;
+    --primary-foreground: #f8fafc;
 
-    --secondary: 271 91% 65%;
-    --secondary-foreground: 210 40% 98%;
-    --secondary-50: 270 100% 98%;
-    --secondary-100: 268.7 100% 95.5%;
-    --secondary-200: 268.6 100% 91.8%;
-    --secondary-300: 269.2 97.4% 85.1%;
-    --secondary-400: 270 95.2% 75.3%;
-    --secondary-500: 271 91% 65%;
-    --secondary-600: 271.5 91.7% 56.5%;
-    --secondary-700: 272.1 71.7% 47.1%;
-    --secondary-800: 272.9 67.2% 39.4%;
-    --secondary-900: 273.6 65.6% 32%;
+    --secondary: #12b981;
+    --secondary-foreground: #1c1917;
 
-    --accent: 173.4 100% 36.3%;
-    --accent-foreground: 210 40% 98%;
-    --accent-50: 171.4 100% 96.9%;
-    --accent-100: 170.8 100% 93.9%;
-    --accent-200: 171.5 100% 87.5%;
-    --accent-300: 172.4 100% 77.8%;
-    --accent-400: 173 100% 68.6%;
-    --accent-500: 173.4 100% 36.3%;
-    --accent-600: 174.2 100% 29.4%;
-    --accent-700: 174.3 100% 24.7%;
-    --accent-800: 174.1 100% 20%;
-    --accent-900: 174.3 100% 16.5%;
+    --accent: #d53f8c;
+    --accent-foreground: #1c1917;
 
-    --muted: 210 40% 96.1%;
-    --muted-foreground: 215.4 16.3% 46.9%;
+    --muted: #f1f5f9;
+    --muted-foreground: #64748b;
 
-    --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 210 40% 98%;
+    --destructive: #ef4444;
+    --destructive-foreground: #f8fafc;
 
-    --border: 214.3 31.8% 91.4%;
-    --input: 214.3 31.8% 91.4%;
-    --ring: 222.2 84% 4.9%;
+    --border: #e2e8f0;
+    --input: #e2e8f0;
+    --ring: #0369a1;
 
     --radius: 0.5rem;
   }
 
   .dark {
-    --background: 222.2 84% 4.9%;
-    --foreground: 210 40% 98%;
+    --background: #020817;
+    --foreground: #f8fafc;
 
-    --card: 222.2 84% 4.9%;
-    --card-foreground: 210 40% 98%;
+    --card: #020817;
+    --card-foreground: #f8fafc;
 
-    --popover: 222.2 84% 4.9%;
-    --popover-foreground: 210 40% 98%;
+    --popover: #020817;
+    --popover-foreground: #f8fafc;
 
-    --primary: 217.2 91.2% 59.8%;
-    --primary-foreground: 222.2 47.4% 11.2%;
-    --primary-50: 226.7 100% 96.9%;
-    --primary-100: 223.6 100% 93.1%;
-    --primary-200: 223.5 100% 86.7%;
-    --primary-300: 223.8 100% 77.8%;
-    --primary-400: 223.9 100% 68.6%;
-    --primary-500: 224.3 76.3% 48%;
-    --primary-600: 225.9 70.7% 40.2%;
-    --primary-700: 226.5 69.7% 33.1%;
-    --primary-800: 226.9 70.7% 27.1%;
-    --primary-900: 224.4 71.4% 21.8%;
+    --primary: #0369a1;
+    --primary-foreground: #f8fafc;
 
-    --secondary: 271 91% 65%;
-    --secondary-foreground: 210 40% 98%;
-    --secondary-50: 270 100% 98%;
-    --secondary-100: 268.7 100% 95.5%;
-    --secondary-200: 268.6 100% 91.8%;
-    --secondary-300: 269.2 97.4% 85.1%;
-    --secondary-400: 270 95.2% 75.3%;
-    --secondary-500: 271 91% 65%;
-    --secondary-600: 271.5 91.7% 56.5%;
-    --secondary-700: 272.1 71.7% 47.1%;
-    --secondary-800: 272.9 67.2% 39.4%;
-    --secondary-900: 273.6 65.6% 32%;
+    --secondary: #12b981;
+    --secondary-foreground: #1c1917;
 
-    --accent: 173.4 100% 36.3%;
-    --accent-foreground: 210 40% 98%;
-    --accent-50: 171.4 100% 96.9%;
-    --accent-100: 170.8 100% 93.9%;
-    --accent-200: 171.5 100% 87.5%;
-    --accent-300: 172.4 100% 77.8%;
-    --accent-400: 173 100% 68.6%;
-    --accent-500: 173.4 100% 36.3%;
-    --accent-600: 174.2 100% 29.4%;
-    --accent-700: 174.3 100% 24.7%;
-    --accent-800: 174.1 100% 20%;
-    --accent-900: 174.3 100% 16.5%;
+    --accent: #d53f8c;
+    --accent-foreground: #f8fafc;
 
-    --muted: 217.2 32.6% 17.5%;
-    --muted-foreground: 215 20.2% 65.1%;
+    --muted: #1e293b;
+    --muted-foreground: #94a3b8;
 
-    --destructive: 0 62.8% 30.6%;
-    --destructive-foreground: 210 40% 98%;
+    --destructive: #7f1d1d;
+    --destructive-foreground: #f8fafc;
 
-    --border: 217.2 32.6% 17.5%;
-    --input: 217.2 32.6% 17.5%;
-    --ring: 212.7 26.8% 83.9%;
+    --border: #1e293b;
+    --input: #1e293b;
+    --ring: #cbd5e1;
   }
-} */
+}
 
-/* @layer base {
+@layer base {
   * {
     @apply border-border;
   }
 
   body {
     @apply bg-background text-foreground;
+    font-family: "Inter", sans-serif;
   }
-} */
+}
 
 @layer utilities {
+  .scrollbar-custom {
+    scrollbar-width: thin;
+    scrollbar-color: var(--primary) var(--background);
+  }
 
-  /* Scrollbar styles */
-  ::-webkit-scrollbar {
+  .scrollbar-custom::-webkit-scrollbar {
     width: 8px;
-    /* Width of the scrollbar */
     height: 8px;
-    /* Height for horizontal scrollbar */
   }
 
-  ::-webkit-scrollbar-track {
-    background: #f0f0f0;
-    /* Light gray background for the track */
+  .scrollbar-custom::-webkit-scrollbar-track {
+    background: var(--background);
     border-radius: 6px;
-    /* Rounded corners for the track */
   }
 
-  ::-webkit-scrollbar-thumb {
-    background: #cccccc;
-    /* Light gray for the thumb */
+  .scrollbar-custom::-webkit-scrollbar-thumb {
+    background-color: var(--primary);
     border-radius: 6px;
-    /* Rounded corners for the thumb */
-    border: 3px solid transparent;
-    /* Space around the thumb */
-    border-color: transparent;
-    /* Match the track */
+    border: 3px solid var(--background);
   }
 
-  ::-webkit-scrollbar-thumb:hover {
-    background: #999999;
-    /* Darker gray on hover */
-  }
-
-  ::-webkit-scrollbar-thumb:active {
-    background: #777777;
-    /* Even darker gray when active */
+  .scrollbar-custom::-webkit-scrollbar-thumb:hover {
+    background-color: var(--primary-foreground);
   }
 }
